tests/NormalTests/paczka1/fuzzy1/66690893.err
Error in line 7: 5k2ev2 A187 61,6
Error in line 9: q76H S201 64,4
Error in line 18: C
Error in line 13: CEetrmFmWM A187 8,3
Error in line 28: 5k2ev2 A786 91,6
Error in line 20: 5MHTg0ImMg A45 26,9
Error in line 41: q76H A45 59,73
